Add updated YAML for progress tracker for all pages/*
- NB: doing this w/ --patch, since original branch on which work was
  performed has a lot of Not Ready For Primetime changes on it

--- a/pages/fellowship.html
+++ b/pages/fellowship.html
@@ -2,6 +2,7 @@
 layout: no-header
 title: Fellowship Layout
 permalink: /fellowship/
+fake: true
 status: in progress
 notes:
 - Provides layout model for pages in 'graduate-opportunities/'
