--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -2,10 +2,12 @@
 layout: default
 title: Makerspace
 permalink: /makerspace/
-status: in progress
+status: 3/4 done
+time-required: ~3hrs in a crunch; ~6 hours ideally.
 notes:
-- Incorporate Shane's new pics!
-- Probably about 80% finished
+- Content: wording done for Phase 1. Needs calendar incorporated and skills-block commented out for now. Location needs marked on map.
+- Style: prototype done, need to tweak and rearrange.
+- NB: Skills-block is chart mapping Makerspace skills that current people have. In Phase 2, add Shane's new pictures.
 ---
 
 <div class="makerspace-landing-grid">
