--- a/pages/progress-tracker.html
+++ b/pages/progress-tracker.html
@@ -2,10 +2,12 @@
 layout: default
 title: Progress Tracker
 permalink: /progress-tracker/
-status: finished
+fake: true
+status: done
 notes:
-- Pre-production page to track progress of site building
-- Should not show once new site is deployed
+- Content: done
+- Style: done
+- NB: pre-production only
 ---
 
 <div class="progress-big-title"><div>Progress Tracker</div></div>
