--- a/pages/text.html
+++ b/pages/text.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Text-Based Page
-permalink: /text-page-layout/
+permalink: /text/
+fake: true
 status: in progress
 notes:
 - Model layout page for anything that's mostly body text, like a blog post
