--- a/pages/research.html
+++ b/pages/research.html
@@ -2,11 +2,11 @@
 layout: default
 title: Research
 permalink: /research/
-status: in progress
+status: 1/2 done
+time-requirement: ~2.5hrs in a crunch; ~5hrs ideally
 notes:
-- Main topic page (linked from homepage)
-- About 80% done
-- Mostly SCSS tweaks on gallery display left to incorporate
+- Content: generated from research/ dir. Blurb done 'til content team edits. Need some replacement images, size-wise.
+- Style: SCSS proving quite challenging. Wanted to do something fancier, but will probably phone it in for Phase 1 with simple grid under time constraint.
 ---
 
 <div class="research-landing-wrapper">
