--- a/pages/search.html
+++ b/pages/search.html
@@ -3,8 +3,9 @@ layout: page
 title: Search
 permalink: /search/
 notes:
-- Search itself currently doesn't work
-- Ask Zoe to update once site contents are mostly stable
+- Content: doesn't currently work
+- Style: not started
+- NB: Phase 2 styling priority
 ---
 <br/>&nbsp;
 <form action="get" id="site_search">
