--- a/pages/progress-tracker.html
+++ b/pages/progress-tracker.html
@@ -19,18 +19,21 @@ notes:
 		<!-- Columns: -->
 		<div class="progress__column-label--1">#</div>
 		<div class="progress__column-label--2">Page</div>
-		<div class="progress__column-label--3">Status</div>
-		<div class="progress__column-label--4">Notes</div>
+		<div class="progress__column-label--3">Size</div>
+		<div class="progress__column-label--4">Status</div>
+		<div class="progress__column-label--5">Notes</div>
 		<!-- end columns-->
 
 		<!-- Main content -->
 		{% for page in site.pages %}
-		{% if page.layout != nil %}
+		{% if page.layout != nil and page.fake != true %}
 			<div class="progress-item__num">{{ forloop.index }}</div>
 
 			<div class="progress-item__name">
 				<a href="{{ page.url }}">{{ page.title }}</a>
 			</div>
+
+			<div class="progress-item__time">{{ item.time-required }}</div>
 
 			<div class="progress-item__status">
 				{% if page.status != nil %}
@@ -43,9 +46,12 @@ notes:
 			<div class="progress-item__notes">
 				{% if page.notes != nil %}
 					<ul>
-					{% for note in page.notes %}
-						<li>{{ note }}</li>
-					{% endfor %}
+					{% assign note = page.notes %}
+						<li>Content: {{ note[0].Content }}</li>
+						<li>Style: {{ note[1].Style }}</li>
+						{% if note.size > 2 %}
+						<li>NB: {{ note[2].NB }}</li>
+						{% endif %}
 					</ul>
 				{% else %}
 					<div>--</div>
@@ -92,9 +98,12 @@ notes:
 			<div class="progress-item__notes">
 				{% if item.notes != nil %}
 					<ul>
-					{% for note in item.notes %}
-						<li>{{ note }}</li>
-					{% endfor %}
+					{% assign note = item.notes %}
+						<li>Content: {{ note[0].Content }}</li>
+						<li>Style: {{ note[1].Style }}</li>
+						{% if note.size > 2 %}
+						<li>NB: {{ note[2].NB }}</li>
+						{% endif %}
 					</ul>
 				{% else %}
 					<div>--</div>
