Fix variable name issue from copy/paste error

--- a/pages/progress-tracker.html
+++ b/pages/progress-tracker.html
@@ -33,7 +33,7 @@ notes:
 				<a href="{{ page.url }}">{{ page.title }}</a>
 			</div>
 
-			<div class="progress-item__time">{{ item.time-required }}</div>
+			<div class="progress-item__time">{{ page.time-required }}</div>
 
 			<div class="progress-item__status">
 				{% if page.status != nil %}
