Fix mislabel: 'time-requirement' -> 'time-required'

--- a/pages/research.html
+++ b/pages/research.html
@@ -3,7 +3,7 @@ layout: default
 title: Research
 permalink: /research/
 status: 1/2 done
-time-requirement: ~2.5hrs in a crunch; ~5hrs ideally
+time-required: ~2.5hrs in a crunch; ~5hrs ideally
 notes:
 - Content: generated from research/ dir. Blurb done 'til content team edits. Need some replacement images, size-wise.
 - Style: SCSS proving quite challenging. Wanted to do something fancier, but will probably phone it in for Phase 1 with simple grid under time constraint.
