--- a/pages/search.html
+++ b/pages/search.html
@@ -2,6 +2,7 @@
 layout: page
 title: Search
 permalink: /search/
+time-required: unknown
 notes:
 - Content: doesn't currently work
 - Style: not started
