--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -2,7 +2,7 @@
 layout: page
 title: Site Map
 permalink: /sitemap/
-time-requirement: ~1hr
+time-required: ~1hr
 notes:
 - Content: done
 - Style: not started. Only add simple spacing/margins/title.
