--- a/pages/events.html
+++ b/pages/events.html
@@ -10,11 +10,31 @@ notes:
 - NB: are these a subset of posts, or will events be a different data structure?
 ---
 
-<h2>Current and past events hosted, sponsored, or partnered on by the Scholars' Lab.</h2>
+<div class="events-wrapper">
 
-<div id="lab-grid">
-{% for page in site.events %}
-  <h3>{{ page.title }}</h3>
-  <section><a href="{{ site.url }}/events/{{ page.slug }}">{{ page.start_date}} at {{ page.start_time }}</a></section>
-{% endfor %}
-</div>
+	<header class="events-page-header">
+		<div class="events-header__big-title">Events</div>
+		<div class="events-header__subtitle">Current and past events hosted, sponsored, or partnered on by the Scholars' Lab.</div>
+	</header>
+
+	<div class="events-main-content">
+		<div class="events-gallery">
+			<!-- event layout: -->
+			{% for event in site.events %}
+			<section class="events-gallery__item">
+				<div class="events-item__date">
+					<div>Insert date</div>
+				</div>
+				<div class="events-item__title">{{ event.title }}</div>
+				<div class="events-item__logistics">
+					<div class="events-logistics__time"><span>When: </span>{{ event.start_time | date: "%r" | remove: ":00 " }} to {{ event.end_time | date: "%r" | remove: ":00 " }}</div>
+					<div class="events-logistics__place"><span>Where: </span>{{ event.location }}</div>
+				</div>
+				<div class="events-item__details">
+					<a class="events-detail__cta" href="{{ site.url }}/events/{{ event.slug }}">Details &rsaquo;</a>
+				</div>
+			</section>
+			{% endfor %} <!-- end event -->
+		</div> <!-- end gallery -->
+	</div> <!-- end main content -->
+</div> <!-- end wrapper -->
