--- a/pages/events.html
+++ b/pages/events.html
@@ -23,15 +23,15 @@ notes:
 			{% for event in site.events %}
 			<section class="events-gallery__item">
 				<div class="events-item__date">
-					<div>{{ event.start_date | date: "%b %-d" }}</div>
+					<div>{{ event.start_date | date: "%b" }}<br/>{{ event.start_date | date: "%-d" }}</div>
 				</div>
 				<div class="events-item__title">{{ event.title }}</div>
 				<div class="events-item__logistics">
 					<div class="events-logistics__time"><span>When: </span>{{ event.start_date | date: "%B %-d" }}, {{ event.start_time | date: "%r" | remove: ":00 " }}-{{ event.end_time | date: "%r" | remove: ":00 " }}</div>
 					<div class="events-logistics__place"><span>Where: </span>{{ event.location }}</div>
 				</div>
-				<div class="events-item__details">
-					<a class="events-detail__cta" href="{{ site.url }}/events/{{ event.slug }}">Details &rsaquo;</a>
+				<div class="events-item__cta">
+					<a href="{{ site.url }}/events/{{ event.slug }}">Details &rsaquo;</a>
 				</div>
 			</section>
 			{% endfor %} <!-- end event -->
