Subtract navbar height from top on fake ppl, prog tracker, & blog post

--- a/pages/fake-people.html
+++ b/pages/fake-people.html
@@ -5,7 +5,7 @@ permalink: /fake-people/
 ---
 
 <article style="padding: 0 8.33%;">
-	<h1 style="margin-top: calc(60px + 1em);">Fake People</h1>
+	<h1>Fake People</h1>
 	<p>(People for layout testing purposes.)</p>
 	<ul>
 		{% for post in site.fake-people %}
