--- a/pages/fake-blog.html
+++ b/pages/fake-blog.html
@@ -8,3 +8,48 @@ fake: true
 {% for post in site.fake-blog %}
 <h3><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
 {% endfor %}
+
+<div class="blog-wrapper">
+
+	<header class="blog-page-header">
+		<div class="blog-header__big-title">blog</div>
+		<div class="blog-header__subtitle">Current and past blog hosted, sponsored, or partnered on by the Scholars' Lab.</div>
+	</header>
+
+	<div class="blog-main-content">
+		<div class="blog-gallery">
+			{% assign blog = site.fake-blog | sort: 'date' %}
+			<!-- post layout: -->
+			{% for post in blog %}
+			<section class="blog-gallery__item">
+				<div class="blog-item__date">
+					<div>{{ post.start_date | date: "%b" }}<br/>{{ post.start_date | date: "%-d" }}</div>
+				</div>
+				<div class="blog-item__title">
+					<a href="{{ site.url }}/blog/{{ post.slug }}">{{ post.title }}</a>
+				</div>
+				<!-- remove trailing seconds zeros on time -->
+				{% assign start_time = post.start_time | date: "%r" | remove: ":00 " %}
+				{% assign end_time = post.end_time | date: "%r" | remove: ":00 " %}
+				<!-- check for leading zero -->
+				{% assign zerocheck1 = start_time | slice: 0 %}
+				{% assign zerocheck2 = end_time | slice: 0 %}
+				<!-- remove if present -->
+				{% if zerocheck1 == '0' %}
+					{% assign start_time = start_time | slice: 1, 6 %}
+				{% endif %}
+				{% if zerocheck2 == '0' %}
+					{% assign end_time = end_time | slice: 1, 6 %}
+				{% endif %}
+				<div class="blog-item__logistics">
+					<div class="blog-logistics__time"><span>When: </span>{{ post.start_date | date: "%B %-d, %Y" }}, {{ start_time }}-{{ end_time }}</div>
+					<div class="blog-logistics__place"><span>Where: </span>{{ post.location }}</div>
+				</div>
+				<div class="blog-item__cta">
+					<a href="{{ site.url }}/blog/{{ page.url }}">Details &rsaquo;</a>
+				</div>
+			</section>
+			{% endfor %} <!-- end post -->
+		</div> <!-- end gallery -->
+	</div> <!-- end main content -->
+</div> <!-- end wrapper -->
