Capitalize title and update intro text

--- a/pages/fake-blog.html
+++ b/pages/fake-blog.html
@@ -7,8 +7,8 @@ fake: true
 
 <div class="blog-wrapper">
 	<header class="blog-page-header">
-		<div class="blog-header__big-title">blog</div>
-		<div class="blog-header__subtitle">Current and past blog hosted, sponsored, or partnered on by the Scholars' Lab.</div>
+		<div class="blog-header__big-title">Blog</div>
+		<div class="blog-header__subtitle">Our thoughts, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their scholarship around experimental and digital humanities and culture.</div>
 	</header>
 
 	<div class="blog-main-content">
