--- a/pages/fake-blog.html
+++ b/pages/fake-blog.html
@@ -21,7 +21,7 @@ fake: true
 					<div>{{ post.start_date | date: "%b" }}<br/>{{ post.start_date | date: "%-d" }}</div>
 				</div>
 				<div class="blog-item__title">
-					<a href="{{ site.url }}/blog/{{ post.slug }}">{{ post.title }}</a>
+					<a href="{{ site.url }}/{{ post.url }}">{{ post.title }}</a>
 				</div>
 				<!-- remove trailing seconds zeros on time -->
 				{% assign start_time = post.start_time | date: "%r" | remove: ":00 " %}
