--- a/pages/fake-blog.html
+++ b/pages/fake-blog.html
@@ -23,7 +23,7 @@ fake: true
 				</div>
 				<!-- fetch author object, link to their page -->
 				{% assign author = site.people | where: 'slug', post.author | first %}
-				<div class=blog-item__author>
+				<div class="blog-item__author">
 					<span>By: </span><a href="{{ site.url}}/people/{{ post.author }}">{{ author.name }}</a>
 				</div>
 				<div class="blog-item__date"><span>Posted: </span>{{ post.date | date: "%B %-d, %Y" }}</div>
