Remove 20-post limit to blog before put code as actual blog page

--- a/pages/fake-blog.html
+++ b/pages/fake-blog.html
@@ -14,7 +14,7 @@ fake: true
 	<div class="blog-main-content">
 		<div class="blog-gallery">
 			<!-- post layout: -->
-			{% for post in site.posts limit: 20 %}
+			{% for post in site.posts %}
 			<section class="blog-gallery__item">
 				<div class="blog-item__title">
 					<span>
