Use site pages instead of site posts for flexible nav links

--- a/pages/flexible-nav.html
+++ b/pages/flexible-nav.html
@@ -6,14 +6,18 @@ permalink: /flexible-nav/
 
 <div class="flexnav-wrapper">
 	<ul class="flexnav-main-grid">
-	{% for post in site.posts %}
-		<li class="flexnav__item"><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
+	{% for page in site.pages %}
+	{% if page.layout != nil %}
+		<li class="flexnav__item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+	{% endif %}
 	{% endfor %}
 		<li class="flexnav__more-menu">
 			<div class="flexnav-more__prompt" aria-label="More menu items">More</div>
 			<ul class="flexnav-more__wrapper">
-			{% for post in site.posts %}
-				<li class="flexnav-more__item"><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
+			{% for page in site.pages %}
+			{% if page.layout != nil %}
+				<li class="flexnav-more__item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+			{% endif %}
 			{% endfor %}
 			</ul>
 		</li>
