Add 'nav: true/false' var to all page YAML -> show in top nav or not

--- a/pages/fellowship.html
+++ b/pages/fellowship.html
@@ -3,6 +3,7 @@ layout: no-header
 title: Fellowship Layout
 permalink: /fellowship/
 fake: true
+nav: false
 status: in progress
 notes:
 - Provides layout model for pages in 'graduate-opportunities/'
