--- a/pages/logos.html
+++ b/pages/logos.html
@@ -3,6 +3,7 @@ layout: default
 title: Logo Testing
 permalink: /logos/
 fake: true
+nav: false
 status: done
 notes:
 - Content: done until new logo drafts; pre-production page to view logo design process
