--- a/pages/posts-by-tag.html
+++ b/pages/posts-by-tag.html
@@ -3,6 +3,7 @@ layout: page
 title: Posts by Tag
 permalink: /posts-by-tag/
 fake: true
+nav: false
 ---
 
 <!-- use this as a layout w/ JS that inserts the proper string when people click on the tag link. Or just Liquid, not even sure if one needs JS? Investigate. -->
