--- a/pages/research.html
+++ b/pages/research.html
@@ -2,11 +2,13 @@
 layout: default
 title: Research
 permalink: /research/
+nav: true
 status: 1/2 done
 time-required: ~2.5hrs in a crunch; ~5hrs ideally
 notes:
 - Content: generated from research/ dir. Blurb done 'til content team edits. Need some replacement images, size-wise.
 - Style: SCSS proving quite challenging. Wanted to do something fancier, but will probably phone it in for Phase 1 with simple grid under time constraint.
+- NB: Amanda's organization on the initial nav links wrapped this within a larger frame of "Scholarship", which I dig a lot. Once that wrapper exists, this is no longer a topnav link itself.
 ---
 
 <div class="research-landing-wrapper">
