--- a/pages/text.html
+++ b/pages/text.html
@@ -3,7 +3,7 @@ layout: default
 title: Text-Based Page
 permalink: /text/
 fake: true
-status: in progress
+nav: false
 notes:
 - Model layout page for anything that's mostly body text, like a blog post
 - Should not appear in production
