--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -2,6 +2,7 @@
 layout: default
 title: Makerspace
 permalink: /makerspace/
+nav: true
 status: 3/4 done
 time-required: ~3hrs in a crunch; ~6 hours ideally.
 notes:
