--- a/pages/progress-tracker.html
+++ b/pages/progress-tracker.html
@@ -3,6 +3,7 @@ layout: default
 title: Progress Tracker
 permalink: /progress-tracker/
 fake: true
+nav: false
 status: done
 notes:
 - Content: done
