--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -3,6 +3,7 @@ layout: default
 title: Makerspace
 permalink: /makerspace/
 nav: true
+order: 5
 status: 3/4 done
 time-required: ~3hrs in a crunch; ~6 hours ideally.
 notes:
