--- a/pages/research.html
+++ b/pages/research.html
@@ -3,6 +3,7 @@ layout: default
 title: Research
 permalink: /research/
 nav: true
+order: 3
 status: 1/2 done
 time-required: ~2.5hrs in a crunch; ~5hrs ideally
 notes:
