Update nav link order & display titles of some pages
- Closes #107

- Changes titles of some pages to names of pages that don't exist yet,
  so they make sense in the nav. (E.g. "Research" -> "Scholarship", even
  tho research will probably just be contained w/in scholarship
  eventually)

--- a/pages/research.html
+++ b/pages/research.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Research
+title: Scholarship # -> was 'Research', no 'scholarship' page exists yet
 permalink: /research/
 nav: true
 order: 3
