Add year variable to Liquid templating in Research page

--- a/pages/research.html
+++ b/pages/research.html
@@ -42,7 +42,7 @@ notes:
             <img src="{{ '/assets/img/research/' | append: page.preview-img | relative_url }}" alt="{{ page.title }}">
           </div>
           <div class="research-item__title">{{ page.title }}</div>
-          <div class="research-item__year">2012</div>
+          <div class="research-item__year">{{ page.year }}</div>
         </a>
       </div>
     {% endfor %}
@@ -62,7 +62,7 @@ notes:
             <img src="{{ '/assets/img/research/' | append: page.preview-img | relative_url }}" alt="{{ page.title }}">
           </div>
           <div class="research-item__title">{{ page.title }}</div>
-          <div class="research-item__year">2012</div>
+          <div class="research-item__year">{{ page.year }}</div>
         </a>
       </div>
     {% endfor %}
