Move subtitle out of landing div & add divs for decorative lines
- Empty divs in landing are for colored bars of different lengths

- See screenshots and next commit

--- a/pages/research.html
+++ b/pages/research.html
@@ -14,14 +14,37 @@ notes:
 
 <div class="research-landing-wrapper">
   <div class="research-landing-grid">
-    <div class="research-landing__big-title" aria-label="Landing page">
+    <div class="research-landing__page-title" aria-label="Landing page">
       <div class="research-title__text">Research</div>
     </div>
-    <div class="research-landing__description">
-      <p>Scholarship is one part critical thinking (research, writing, coding, building, designing, experimenting, play…) and one part communication (traditional publishing and other forms of “making public”, teaching, open source code, other ways for your intellectual community to learn from and build on your work).</p>
-      <p>This page shares a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers.</p>
+    <div class="research-landing__lines1">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="research-landing__lines2">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
   </div>
+</div>
+
+<div class="research-landing__description">
+  <p>Scholarship is one part critical thinking (research, writing, coding, building, designing, experimenting, play…) and one part communication (traditional publishing and other forms of “making public”, teaching, open source code, other ways for your intellectual community to learn from and build on your work).</p>
+  <p>This page shares a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers.</p>
 </div>
 
 <div class="research-main-content" aria-label="Main content">
