--- a/pages/research.html
+++ b/pages/research.html
@@ -64,8 +64,8 @@ notes:
           <div class="research-item__img">
             <img src="{{ '/assets/img/research/' | append: page.preview-img | relative_url }}" alt="{{ page.title }}">
           </div>
-          <div class="research-item__title">{{ page.title }}</div>
-          <div class="research-item__year">{{ page.year }}</div>
+          <div class="research-item__title"><span>{{ page.title }}</span></div>
+          <div class="research-item__year"><span>{{ page.year }}</span></div>
         </a>
       </div>
     {% endfor %}
@@ -84,8 +84,8 @@ notes:
           <div class="research-item__img">
             <img src="{{ '/assets/img/research/' | append: page.preview-img | relative_url }}" alt="{{ page.title }}">
           </div>
-          <div class="research-item__title">{{ page.title }}</div>
-          <div class="research-item__year">{{ page.year }}</div>
+          <div class="research-item__title"><span>{{ page.title }}</span></div>
+          <div class="research-item__year"><span>{{ page.year }}</span></div>
         </a>
       </div>
     {% endfor %}
