Update YAML to indicate have started landing page

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -4,10 +4,11 @@ title: Spatial Tech
 permalink: /spatial-technologies/
 nav: true
 order: 6
+status: in progress
 time-required: ~8hrs
 notes:
 - Content: not started
-- Style: not started
+- Style: landing page started
 - NB: time requirement is a repeat - see stats on "Phase 1, Other", #9 for details.
 ---
 
