Substitute text from CHI/GIS current pages for dummy text
- Just directly copy-pasted so is not permanent, but at
  least have info here now

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -53,4 +53,28 @@ notes:
 	</div>
 </div>
 
-Information about the Scholars' Lab Spatial Technology unit will appear here eventually.
+<div class="spatial-main-content">
+	<!-- use this for homepage as well -->
+	<div class="spatial__ethos">
+		<div class="spatial-ethos__title">Ethos</div>
+		<p>We specialize in a wide-range of methods in spatial analysis related to mapping and the collection of cultural heritage data, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom. We provide training and consultations on the latest software and documentation tools, including GIS, 3D modeling, laser scanners, aerial drones, photogrammetric technologies, our own Neatline exhibit-builder for storytelling in the humanities, and more.</p>
+	</div>
+
+	<!-- current, unedited GIS text: -->
+	<div class="spatial__gis-text">
+		<div>Geospatial Services</div>
+		<p>As part of <a href="/spatial-technologies">the Spatial Technologies group</a>, our expert staff supports application of GIS and mapping technologies across the disciplines. We also provide consultation on data and software for research and classroom use.</p>
+
+		<div>Getting started with GIS</div>
+		<p>Need help finding data, getting it on a map, or downloading the newest version of ArcGIS?  Check the FAQ’s on the <a href="http://guides.lib.virginia.edu/gis">GIS research page</a>, search the <a href="http://gis.lib.virginia.edu/">UVA Library Geoportal</a>, or come to a session in our Fall or Spring <a href="http://www.scholarslab.org/events/">workshop series</a>.   You can also consult directly with GIS specialist Chris Gist.  If you have questions or would like to schedule an appointment, please contact <a href="mailto:slabgis@virginia.edu">slabgis@virginia.edu</a>.</p>
+
+		<div>Geospatial Research Projects</div>
+		<p>With the support of the NEH and Library of Congress and in collaboration with the creators of <a href="http://omeka.org">Omeka</a>, we made <a href="http://neatline.org">Neatline</a>, a major contribution to spatial and temporal annotation and storytelling in the humanities.  In order to spark the “spatial humanities” in the United States, in 2011, we also hosted <a href="http://spatial.scholarslab.org/">GeoInst</a>, a 2-year NEH-funded workshop for librarians, scholars, and technologists. See more of our spatial humanities and GIS projects done in collaboration with UVa faculty on our <a href="http://scholarslab.org/research/">Research page</a>.</p>
+	</div>
+
+	<!-- excerpt from CHI website right now -->
+	<div class="spatial__chi-text">
+		<div>Currently collecting yesterday&#8217;s data for tomorrow.</div>
+		<p lang="en">The University of Virginia has the rare privilege and honor of being located at a UNESCO World Heritage Site. We are surrounded by history at every level, from artifact to architecture. With equipment obtained by a far-sighted grant obtained in 2011, the University of Virginia Library has been collecting cultural heritage data of the buildings, monuments, sites and objects that surround us and that come to us via our faculty and students. We have documentation tools that include laser scanners, aerial drones and photogrammetric technologies, as well as industry-standard software to collect and process what we recognize to be primary source data that is vital to our historic record as well as significant for scholarly use. In pursuit of our mission, we are researching methods of collecting, archiving and disseminating this data to our academic constituency, which ranges across our schools of Architecture and Architectural History to Mechanical and Civil Engineering and beyond. Because libraries across our nation and across the world are located close to historic sites and culturally significant objects, we believe that libraries everywhere can gather and steward cultural heritage data at some scale. The University of Virginia Library is interested in establishing a collaborative environment focused on cultural heritage data methods and workflow. We are looking to tap into the expertise that the broader research-library community brings in developing metadata standards, modes of use and innovative applications of cultural heritage data.</p>
+	</div>
+</div> <!-- end main content -->
