--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -5,10 +5,10 @@ permalink: /spatial-technologies/
 nav: true
 order: 6
 status: in progress
-time-required: ~8hrs
+time-required: ~6hrs
 notes:
-- Content: not started
-- Style: landing page started
+- Content:
+- Style: landing page mostly done, HTML skeleton in place
 - NB: time requirement is a repeat - see stats on "Phase 1, Other", #9 for details.
 ---
 
@@ -54,27 +54,160 @@ notes:
 </div>
 
 <div class="spatial-main-content">
-	<!-- use this for homepage as well -->
-	<div class="spatial__ethos">
-		<div class="spatial-ethos__title">Ethos</div>
-		<p>We specialize in a wide-range of methods in spatial analysis related to mapping and the collection of cultural heritage data, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom. We provide training and consultations on the latest software and documentation tools, including GIS, 3D modeling, laser scanners, aerial drones, photogrammetric technologies, our own Neatline exhibit-builder for storytelling in the humanities, and more.</p>
+
+	<div class="spatial__mission"> <!-- = 'ethos' in Makerspace -->
+		<div class="spatial-mission__title">Mission</div>
+		<div class="spatial-mission__text">
+			<p>We specialize in a wide-range of methods in spatial analysis related to mapping and the collection of cultural heritage data, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom. We provide training and consultations on the latest software and documentation tools, including GIS, 3D modeling, laser scanners, aerial drones, photogrammetric technologies, our own Neatline exhibit-builder for storytelling in the humanities, and more.</p>
+		</div>
 	</div>
 
-	<!-- current, unedited GIS text: -->
-	<div class="spatial__gis-text">
-		<div>Geospatial Services</div>
-		<p>As part of <a href="/spatial-technologies">the Spatial Technologies group</a>, our expert staff supports application of GIS and mapping technologies across the disciplines. We also provide consultation on data and software for research and classroom use.</p>
-
-		<div>Getting started with GIS</div>
-		<p>Need help finding data, getting it on a map, or downloading the newest version of ArcGIS?  Check the FAQ’s on the <a href="http://guides.lib.virginia.edu/gis">GIS research page</a>, search the <a href="http://gis.lib.virginia.edu/">UVA Library Geoportal</a>, or come to a session in our Fall or Spring <a href="http://www.scholarslab.org/events/">workshop series</a>.   You can also consult directly with GIS specialist Chris Gist.  If you have questions or would like to schedule an appointment, please contact <a href="mailto:slabgis@virginia.edu">slabgis@virginia.edu</a>.</p>
-
-		<div>Geospatial Research Projects</div>
-		<p>With the support of the NEH and Library of Congress and in collaboration with the creators of <a href="http://omeka.org">Omeka</a>, we made <a href="http://neatline.org">Neatline</a>, a major contribution to spatial and temporal annotation and storytelling in the humanities.  In order to spark the “spatial humanities” in the United States, in 2011, we also hosted <a href="http://spatial.scholarslab.org/">GeoInst</a>, a 2-year NEH-funded workshop for librarians, scholars, and technologists. See more of our spatial humanities and GIS projects done in collaboration with UVa faculty on our <a href="http://scholarslab.org/research/">Research page</a>.</p>
+	<div class="spatial__starting">
+		<div class="spatial-starting__title">Getting Started</div>
+		<div class="spatial-starting__how">
+			<ul class="spatial-starting__chi">
+				<h3>CHI</h3>
+				<li>Insert steps for getting started w/ CHI</li>
+			</ul>
+			<ul class="spatial-starting__gis">
+				<h3>GIS</h3>
+				<li>Insert steps for getting started w/ GIS</li>
+			</ul>
+		</div>
 	</div>
 
-	<!-- excerpt from CHI website right now -->
-	<div class="spatial__chi-text">
-		<div>Currently collecting yesterday&#8217;s data for tomorrow.</div>
-		<p lang="en">The University of Virginia has the rare privilege and honor of being located at a UNESCO World Heritage Site. We are surrounded by history at every level, from artifact to architecture. With equipment obtained by a far-sighted grant obtained in 2011, the University of Virginia Library has been collecting cultural heritage data of the buildings, monuments, sites and objects that surround us and that come to us via our faculty and students. We have documentation tools that include laser scanners, aerial drones and photogrammetric technologies, as well as industry-standard software to collect and process what we recognize to be primary source data that is vital to our historic record as well as significant for scholarly use. In pursuit of our mission, we are researching methods of collecting, archiving and disseminating this data to our academic constituency, which ranges across our schools of Architecture and Architectural History to Mechanical and Civil Engineering and beyond. Because libraries across our nation and across the world are located close to historic sites and culturally significant objects, we believe that libraries everywhere can gather and steward cultural heritage data at some scale. The University of Virginia Library is interested in establishing a collaborative environment focused on cultural heritage data methods and workflow. We are looking to tap into the expertise that the broader research-library community brings in developing metadata standards, modes of use and innovative applications of cultural heritage data.</p>
+	<div class="spatial__faq">
+		<div class="spatial-faq__title">FAQ</div>
+		<ul class="spatial-faq__list">
+			<li><span>Question: foo bar bas bat bamus batis bant</span>Answer: Katherine remembers gibberish Latin better than she thought.</li>
+			<li>Etc.</li>
+			<li>E.g., explainers CHI has on their site, some FAQs that GIS links to maybe</li>
+		</ul>
 	</div>
+
+	<!-- meant as more in-depth pairing w/ FAQ: -->
+	<div class="spatial__resources">
+		<div class="spatial-resources__title">Resources</div>
+		<div class="spatial-resources__subtitle">Didn't find what you were looking for, or want to explore these subjects more in-depth? [See...the stuff...below... or don't phrase this as a question whoops]</div>
+		<ul class="spatial-resources__list">
+			<li><span>Purpose of the resource:</span> <a href="#">description of site link</a></li>
+			<li><span>An explainer on GIS, its history, & how we use it:</span> <a href="#">specific library link in GIS portal</a></li>
+		</ul>
+	</div>
+
+	<div class="spatial__inventory">
+		<div class="spatial-inventory__title">Spatial Tech Inventory</div> <!-- placeholder title -->
+		<!-- copy/pasting makerspace version right now since styles already exist -->
+		<div class="maker-inventory__list">
+		  <!-- 3D Printing -->
+		  <ul class="maker-list__3d">
+		    <span>3D Printing</span>
+		    <li>FDM 3D Printers: MakerBot Replicator 2, Ultimaker 2, Lulzbot TAZ 5</li>
+		    <li>SLA 3D Printer: Formlabs Form 2 (available for use with staff assistance only)</li>
+		    <li>Assortment of FDM 3D printer filaments</li>
+		  </ul>
+		  <!-- VR/AR/3D -->
+		  <ul class="maker-list__vr-ar">
+		    <span>VR, AR, & 3D Scanning</span>
+		    <li>NextEngine Desktop 3D laser scanner</li>
+		    <li>Oculus Rift DK1 Development KitsMicrosoft</li>
+		    <li>HoloLens</li>
+		    <li>Google Cardboard classroom set</li>
+		  </ul>
+		  <!-- Physical Computing -->
+		  <ul class="maker-list__physical">
+		    <span>Physical Computing</span>
+		    <li>Sparkfun Arduino kits, with Arduino UNO boards and an assortment of Arduino shields.</li>
+		    <li>Raspberry Pi</li>
+		  </ul>
+		  <!-- Textiles, Wearables - Learn how to take fashion into the future. -->
+		  <ul class="maker-list__wearables">
+		    <span>Textiles & Wearables</span>
+		    <li>Bernini sewing machines + surger</li>
+		    <li>Basic supplies for wearables and tactile computing</li>
+		    <li>Felt</li>
+		    <li>Sewing needles and thread</li>
+		    <li>Quilting/cross-stitch frames</li>
+		  </ul>
+		  <!-- Visual Technologies - For the visually inclined. -->
+		  <ul class="maker-list__visual">
+		    <span>Graphics & Photography</span>
+		    <li>Wacom Cintiq 22HD graphics tablet</li>
+		    <li>Camera equipment:</li>
+		    <li>Canon EOS 6D DSLR camera with 24mm f/2.8 and 35mm f/2.0 lenses</li>
+		    <li>Samsung NX1000 MILC camera with kit lens</li>
+		  </ul>
+		  <!-- Software Suites: -->
+		  <ul class="maker-list__software">
+		    <span>Software</span>
+		    <!-- insert this as an aside somewhere: -->
+		    <!--span>High-end Mac and PC with maker software installed</span-->
+		    <li>Adobe Creative Suite</li>
+		    <li>Agisoft PhotoScan</li>
+		    <li>ArcGIS, qGIS</li>
+		    <li>Arduino</li>
+		    <li>Blender, MeshMixer, Tinkercad, SketchUp, Maya</li>
+		    <li>Cura, Makerbot Desktop</li>
+		    <li>Oculus</li>
+		    <li>PreForm</li>
+		    <li>Rhinocerous</li>
+		    <li>Simplify3D</li>
+		  </ul>
+		  <!-- Miscellaneous -->
+		  <ul class="maker-list__misc">
+		    <span>Miscellaneous</span>
+		    <li>Tool box with basic hand tools (wrenches, screwdrivers. etc.)</li>
+		    <li>Soldering irons, solder, helping hands</li>
+		    <li>Digital multimeters</li>
+		    <li>Spare parts for basic electronics tinkering (breadboards, wire, switches, sensors)</li>
+		  </ul>
+		</div> <!-- end list -->
+	</div> <!-- end inventory -->
+
+	<div class="spatial__people">
+		<div class="spatial-people__title">Spatial Technologists</div>
+		<ul class="spatial-people__list">
+			<!-- use Liquid here: -->
+			<li class="spatial-people__person">
+				<div class="spatial-person__img"><img src="person.jpg" alt="person name"></div>
+				<div class="spatial-person__name"><a href="#">Person Name</a></div> <!-- link to their page -->
+				<div class="spatial-person__position">Position Title</div>
+			</li>
+		</ul> <!-- end person list -->
+	</div>
+
+	<div class="spatial__inclusion-note">
+		<div class="spatial-inclusion__title">A Note on Belonging</div>
+		<div class="spatial-inclusion__text">
+			<p>This text is separate and apart from the blurbs up top explaining what Spatial Tech does and what methods they use to do it. This is a space to explicitly indicate that Spatial Tech is <em>not</em> a boys' club for flying drones, or outdoorsy people, or people who already know how to use ArcGIS and what "photogrammetry" means.</p>
+			<p>This text is necessary here just as it is necessary in the Makerspace page&mdash;women, people of color, and other marginalized groups are much less likely to have had ambient exposure to these types of tools; and much less likely to have been encouraged to keep trying if they didn't get it perfectly the first time. This is a space for learning and curiosity; not for making judgments about groups. A primary mission of Spatial Technologies in the Scholars' Lab is to highlight systemic, endemic injustices rendered invisible by decisions to exclude whole groups from dignified historical record. We need your skills, questions, and backgrounds to succeed, and hope you'll join us.</p>
+		</div>
+	</div>
+
+	<div class="spatial__workshops">
+		<div class="spatial-workshops__title">Our Workshops</div>
+		<ul class="spatial-workshops__list">
+			<!-- Possibly use Liquid for this, depending on if it's worth making workshops a collection? -->
+			<li>
+				<div class="spatial-workshop__title">Title of Workshop</div>
+				<div class="spatial-workshop__logistics">Some sort of brief logistical info&mdash;a sentence description if the title isn't particularly illuminating, or the when/where info if doesn't change.</div>
+				<div class="spatial-workshop__cta"><a href="#">See More</a></div> <!-- link to events page -->
+			</li>
+		</ul>
+	</div>
+
+	<div class="spatial__showcase">
+		<div class="spatial-showcase__title">A Project Sampler</div>
+		<div class="spatial-showcase__subtitle">A selection of projects we're pretty dang proud of. To see more of our work, head over to our <a href="#">Research page</a>.</div>
+		<ul class="spatial-showcase__list">
+			<li>
+				<ul class="spatial-showcase__project">
+					<li>Project Title</li>
+					<li><img src="previewpic.jpg" alt="project title"></li>
+				</ul>
+			</li>
+		</ul>
+		<div class="spatial-showcase__cta"><a href="#">All Projects</a></div> <!-- link to research page -->
+	</div>
+
 </div> <!-- end main content -->
