Add reminder comment

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -65,6 +65,7 @@ notes:
 	<div class="spatial__starting">
 		<div class="spatial-starting__title">Getting Started</div>
 		<div class="spatial-starting__how">
+			<!-- NB: merge these when add content -->
 			<ul class="spatial-starting__chi">
 				<h3>CHI</h3>
 				<li>Insert steps for getting started w/ CHI</li>
