Change class name of workshop titles so =/= conflict w/ universal titles

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -190,7 +190,7 @@ notes:
 		<ul class="spatial-workshops__list">
 			<!-- Possibly use Liquid for this, depending on if it's worth making workshops a collection? -->
 			<li>
-				<div class="spatial-workshop__title">Title of Workshop</div>
+				<div class="spatial-workshop__ws-title">Title of Workshop</div>
 				<div class="spatial-workshop__logistics">Some sort of brief logistical info&mdash;a sentence description if the title isn't particularly illuminating, or the when/where info if doesn't change.</div>
 				<div class="spatial-workshop__cta"><a href="#">See More</a></div> <!-- link to events page -->
 			</li>
