--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -169,11 +169,15 @@ notes:
 		<div class="spatial-people__title">Spatial Technologists</div>
 		<ul class="spatial-people__list">
 			<!-- use Liquid here: -->
+			{% for person in site.people %}
+			{% if person.name == 'Will Rourk' or person.name == 'Arin Bennett' or person.name == 'Chris Gist' or person.name == 'Drew Macqueen' %}
 			<li class="spatial-people__person">
-				<div class="spatial-person__img"><img src="person.jpg" alt="person name"></div>
-				<div class="spatial-person__name"><a href="#">Person Name</a></div> <!-- link to their page -->
-				<div class="spatial-person__position">Position Title</div>
+				<div class="spatial-person__img"><img src="{{ site.baseurl }}/assets/img/people/{{ person.slug }}.jpg" alt="{{ person.name }}"></div>
+				<div class="spatial-person__name"><a href="#">{{ person.name }}</a></div> <!-- link to their page -->
+				<div class="spatial-person__position">{{ person.position }}</div>
 			</li>
+			{% endif %}
+			{% endfor %}
 		</ul> <!-- end person list -->
 	</div>
 
