Add div for STech FAQ subtitle if desired

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -79,6 +79,7 @@ notes:
 
 	<div class="spatial__faq">
 		<div class="spatial-faq__title">FAQ</div>
+		<div class="spatial-faq__subtitle">A subtitle if we want one.</div>
 		<ul class="spatial-faq__list">
 			<li><span>Question: foo bar bas bat bamus batis bant</span>Answer: Katherine remembers gibberish Latin better than she thought.</li>
 			<li>Etc.</li>
