Add explanatory comments/text

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -57,6 +57,7 @@ notes:
 
 	<div class="spatial__mission"> <!-- = 'ethos' in Makerspace -->
 		<div class="spatial-mission__title">Mission</div>
+		<!-- insert relevant links in this text: -->
 		<div class="spatial-mission__text">
 			<p>We specialize in a wide-range of methods in spatial analysis related to mapping and the collection of cultural heritage data, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom. We provide training and consultations on the latest software and documentation tools, including GIS, 3D modeling, laser scanners, aerial drones, photogrammetric technologies, our own Neatline exhibit-builder for storytelling in the humanities, and more.</p>
 		</div>
@@ -79,7 +80,7 @@ notes:
 
 	<div class="spatial__faq">
 		<div class="spatial-faq__title">FAQ</div>
-		<div class="spatial-faq__subtitle">A subtitle if we want one.</div>
+		<div class="spatial-faq__subtitle">A subtitle if we want one. <em>Designer's Note: in my head I just. keep. reading this. with the same creepy emphasis as "a democracy... <strong>if you can keep it."</strong> GAH ok the end.</em></div>
 		<ul class="spatial-faq__list">
 			<li><span>Question: foo bar bas bat bamus batis bant</span>Answer: Katherine remembers gibberish Latin better than she thought.</li>
 			<li>Etc.</li>
