Retitle & reformat "what we do" section
- Splits into 2 paragraphs

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -56,10 +56,11 @@ notes:
 <div class="spatial-main-content">
 
 	<div class="spatial__mission"> <!-- = 'ethos' in Makerspace -->
-		<div class="spatial-mission__title">Mission</div>
+		<div class="spatial-mission__title">What We Do</div>
 		<!-- insert relevant links in this text: -->
 		<div class="spatial-mission__text">
-			<p>We specialize in a wide-range of methods in spatial analysis related to mapping and the collection of cultural heritage data, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom. We provide training and consultations on the latest software and documentation tools, including GIS, 3D modeling, laser scanners, aerial drones, photogrammetric technologies, our own Neatline exhibit-builder for storytelling in the humanities, and more.</p>
+			<p>We specialize in a wide-range of methods in spatial analysis related to <a href="#">mapping</a> and the collection of <a href="#">cultural heritage data</a>, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom.</p>
+			<p>We provide training and consultations on the latest software and documentation tools, including GIS, 3D modeling, laser scanners, aerial drones, photogrammetric technologies, our own <a href="#">Neatline exhibit-builder</a> for storytelling in the humanities, and more.</p>
 		</div>
 	</div>
 
